[package]
name = "rust-sql-test"
version = "0.1.0"
authors = ["sanjay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
warp = "0.2"
serde = "1.0"
serde_derive = "1.0"